--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,16 +1,29 @@
 .product {
   width: 300px;
   height: 510px;
+
+  border-radius: 8px;
+}
+.product-info {
+  padding: 10px 12px;
 }
 .product img {
   width: 286px;
   height: 286px;
-  gap: 45px;
+  border-radius: 8px;
+  margin: 7px;
 }
-.product-name{
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 21px;
-    line-height: 25px;
+.product-name {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 25px;
+}
+.btn-cart {
+  background-color: #ffe0b3;
+  border-radius: 0px 0px 8px 8px;
+}
+.btn-cart:hover {
+  background-color: orange;
 }
