--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,8 +1,10 @@
 .shop-container {
   display: grid;
   grid-template-columns: 4fr 1fr;
+  margin-left: 3%;
 }
 .products-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 45px;
 }
